<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>de.jdufner</groupId>
	<artifactId>webscraper</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>webscraper</name>
	<description>Webscraper using Selenium</description>
	<url/>
	<licenses>
		<license>
			<name>GNU General Public License 3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
		</license>
	</licenses>

	<issueManagement>
		<url>https://github.com/jdufner/webscraper-java/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<scm>
		<connection>scm:git:ssh://git@github.com:jdufner/webscraper-java.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:jdufner/webscraper-java.git</developerConnection>
		<url>https://github.com/jdufner/webscraper-java</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<id>jdufner</id>
			<name>Jürgen Dufner</name>
			<email>juergen@jdufner.de</email>
			<timezone>Europe/Berlin</timezone>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<properties>
        <archunit-junit5.version>1.3.0</archunit-junit5.version>
        <asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>
		<assertj.version>3.27.6</assertj.version>
		<flyway.version>11.14.1</flyway.version>
        <!--flyway-maven-plugin.version>10.20.1</flyway-maven-plugin.version-->
		<httpasyncclient.version>3.0.2</httpasyncclient.version>
		<hsqldb.version>2.7.4</hsqldb.version>
		<java.version>21</java.version>
		<jsoup.version>1.21.2</jsoup.version>
		<jspecify.version>1.0.0</jspecify.version>
		<junit-jupiter.version>5.14.0</junit-jupiter.version>
        <maven-failsafe-plugin.version>3.5.4</maven-failsafe-plugin.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
        <postgresql.version>42.7.8</postgresql.version>
		<selenium.version>4.36.0</selenium.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jdbc</artifactId>
		</dependency>
		<!--dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency-->
		<!--dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!--dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency-->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>${jsoup.version}</version>
		</dependency>
		<dependency>
			<groupId>org.asynchttpclient</groupId>
			<artifactId>async-http-client</artifactId>
			<version>${httpasyncclient.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
			<version>${jspecify.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<version>${flyway.version}</version>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-hsqldb</artifactId>
			<version>${flyway.version}</version>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
			<version>${flyway.version}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>${hsqldb.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>${archunit-junit5.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.asciidoctor</groupId>
			<artifactId>asciidoctor-maven-plugin</artifactId>
			<version>${asciidoctor-maven-plugin.version}</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<!--configuration>
					<profiles>
						<profile>heise</profile>
						<profile>localWebDriver</profile>
					</profiles>
				</configuration-->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<!--forkCount>1</forkCount>
                    <reuseForks>true</reuseForks-->
					<!-- Sets the VM argument line used when unit tests are run. -->
					<argLine>${surefireArgLine}</argLine>
					<!-- Skips unit tests if the value of skip.unit.tests property is true -->
					<skipTests>${skip.unit.tests}</skipTests>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*CT.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- Sets the VM argument line used when integration tests are run. -->
					<argLine>${failsafeArgLine}</argLine>
					<!-- Skips integration tests if the value of skip.integration.tests property is true -->
					<skipTests>${skip.integration.tests}</skipTests>
					<includes>
						<include>**/*AT.java</include>
						<include>**/*IT.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-maven-plugin</artifactId>
				<version>${flyway.version}</version>
				<configuration>
					<user>sa</user>
					<password></password>
					<driver>org.hsqldb.jdbc.JDBCDriver</driver>
					<url>jdbc:hsqldb:mem:testdb</url>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>local</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<spring.profiles.active>heise,localWebDriver,postgres</spring.profiles.active>
			</properties>
		</profile>
		<profile>
			<id>buildserver</id>
			<properties>
				<spring.profiles.active>heise,remoteWebDriver,hsqldb</spring.profiles.active>
			</properties>
		</profile>
	</profiles>

</project>
